[tool.poetry]
name = "cmus-osx"
version = "3.0.5"
description = "Adds track change notifications, and media key support to cmus."
authors = ["Philip Trauner <philip.trauner@arztpraxis.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
mutagen = "^1.42"
pyobjc = "^6.2"
click = "^7.0"
Pillow = "^8.0"

[tool.poetry.dev-dependencies]
pre-commit = "^1.18"

[tool.poetry.scripts]
cmus-osx = "cmus_osx:entrypoint"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
